CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT (hexmap C)

ENABLE_TESTING()

INCLUDE_DIRECTORIES (${CMAKE_BINARY_DIR}/include)
INCLUDE_DIRECTORIES (${CJSON_INCLUDE_DIR})

ADD_EXECUTABLE (hexmap hexmap.c)
TARGET_LINK_LIBRARIES(hexmap ${CJSON_LIBRARIES})

IF (MSVC)
    MSVC_CRT_SECURE_NO_WARNINGS (hexmap)
ENDIF (MSVC)
