CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT (hexmap C)

ENABLE_TESTING()

FIND_PACKAGE (Curses REQUIRED)

INCLUDE_DIRECTORIES (${CMAKE_BINARY_DIR}/include)
INCLUDE_DIRECTORIES (${CJSON_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${QUICKLIST_INCLUDE_DIR})
INCLUDE_DIRECTORIES (${CURSES_INCLUDE_DIR})

ADD_EXECUTABLE (hexmap hexmap.c fake_svc.c)
TARGET_LINK_LIBRARIES(hexmap ${CJSON_LIBRARIES} ${CURSES_LIBRARIES} ${QUICKLIST_LIBRARIES})

IF (MSVC)
    MSVC_CRT_SECURE_NO_WARNINGS (hexmap)
ENDIF (MSVC)
